# aigg-memory

./: .gitignore  LICENSE  QUICKSTART.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
docs/: aigg_memory_kernel_design.md  aigg_skill_design.md  architecture.md  experiment_harness.md  memory_economy_research.md  monopoly_integration.md  mud_emergence_eval.md  mud_sandbox_design.md  paper_memory_kernel.md  planning_design.md  positioning.md  reflection_design.md  verification_design.md
examples/: demo.py  mud-client.ts  mud-demo.mjs
examples/eval/: README.md  experiment_coordination.py  experiment_hmem.py  experiment_hmem_real.py  experiment_hype_cycle.py  experiment_immunity.py  experiment_legibility.py  experiment_ponzi.py  experiment_pump_immunity.py  experiment_social.py  experiment_value_trough.py  harness.py  npc_loop_e2e.py  probes.py  run.py  smallville.py  (+4 more)
tests/: test_agent_client.py  test_aigg_memory.py  test_aigg_memory_units.py  test_bundle.py  test_claude_cli_backend.py  test_cli_commit.py  test_cli_recall.py  test_compaction.py  test_contradictions.py  test_curate.py  test_dream.py  test_explicit_remember.py  test_extract.py  test_index.py  test_infer_deps.py  test_ingest_fallback.py  test_locked.py  test_memory_quality.py  test_memorymakefile.py  test_merge.py  test_planning.py  test_profile.py  test_provenance.py  test_reconcile.py  test_reflection.py  test_semantic.py  test_server.py  test_server_dream.py  test_server_security.py  test_skill_api.py  test_temporal.py  test_tolerant_parse.py  test_verification.py  test_versioning.py
(+25 files in other folders)
